--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,8 @@
-spring.application.name=hwspring
+spring.application.name=hw4
 
 
 #For Embedded Tomcat
-server.servlet.context-path=/hwspring
+server.servlet.context-path=/hw4
 
 #For External Tomcat
 spring.h2.console.enabled=true
